# simple-s3-backup

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
scripts/: backup_blobs_batch_deployment.sh  backup_nonblobs_deployment.sh  backup_zarr_batch_deployment.sh  batch_deployment.sh  clean_logs_directory_deployment.sh  crontab.sh  update_dashboard.sh  update_diff_tree.sh  update_manifest.sh
src/simple_s3_backup/_base/: __init__.py  _dandi.py  _display.py  _globals.py  _update_manifest.py  _utils.py
src/simple_s3_backup/_command_line_interface/: _cli.py
